// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AST tests ignore-comment.md ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": ".b {
  color: red;
}
",
      "file": "/ignore-comment.md",
      "hasBOM": false,
    },
    Object {
      "css": ".f {
  color: red;
}
",
      "file": "/ignore-comment.md",
      "hasBOM": false,
    },
    Object {
      "css": ".h {
  color: red;
}
",
      "file": "/ignore-comment.md",
      "hasBOM": false,
    },
    Object {
      "css": "  .i {
    color: red;
  }
",
      "file": "/ignore-comment.md",
      "hasBOM": false,
    },
    Object {
      "css": "# Header

<!--postcss-ignore-->

\`\`\`css
a {
  color: red;
}
\`\`\`

\`\`\`css
.b {
  color: red;
}
\`\`\`

<!-- postcss-ignore -->
\`\`\`css
.c {
  color: red;
}
\`\`\`

<!--   postcss-ignore   -->




\`\`\`css
.d {
  color: red;
}
\`\`\`

<!--postcss-ignore-->

<style>
.e {
  color: red;
}
</style>

\`\`\`html
<style>
.f {
  color: red;
}
</style>
\`\`\`

<!--postcss-ignore-->
<!--postcss-ignore-->

<style>
.g {
  color: red;
}
</style>

<style>
.h {
  color: red;
}
</style>

<!--postcss-ignore-->

<div>
  <style>
  .i {
    color: red;
  }
  </style>
</div>
",
      "file": "/ignore-comment.md",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 13,
                  "offset": 89,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 13,
                  "offset": 79,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".b",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 14,
              "offset": 91,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 12,
              "offset": 72,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "# Header

<!--postcss-ignore-->

\`\`\`css
a {
  color: red;
}
\`\`\`

\`\`\`css
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 12,
          "offset": 72,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 46,
                  "offset": 315,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 46,
                  "offset": 305,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".f",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 47,
              "offset": 317,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 45,
              "offset": 298,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "",
        "codeBefore": "\`\`\`

<!-- postcss-ignore -->
\`\`\`css
.c {
  color: red;
}
\`\`\`

<!--   postcss-ignore   -->




\`\`\`css
.d {
  color: red;
}
\`\`\`

<!--postcss-ignore-->

<style>
.e {
  color: red;
}
</style>

\`\`\`html
<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 45,
          "offset": 298,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 62,
                  "offset": 442,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 62,
                  "offset": 432,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".h",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 63,
              "offset": 444,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 61,
              "offset": 425,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "",
        "codeBefore": "</style>
\`\`\`

<!--postcss-ignore-->
<!--postcss-ignore-->

<style>
.g {
  color: red;
}
</style>

<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 61,
          "offset": 425,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
    ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 15,
                  "line": 71,
                  "offset": 516,
                },
                "inputId": 0,
                "start": Object {
                  "column": 5,
                  "line": 71,
                  "offset": 506,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
  ",
            "before": "  ",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".i",
          "source": Object {
            "end": Object {
              "column": 3,
              "line": 72,
              "offset": 520,
            },
            "inputId": 0,
            "start": Object {
              "column": 3,
              "line": 70,
              "offset": 497,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "  </style>
</div>
",
        "codeBefore": "</style>

<!--postcss-ignore-->

<div>
  <style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 70,
          "offset": 495,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests nest.md ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "  a {
    color: red;
  }
",
      "file": "/nest.md",
      "hasBOM": false,
    },
    Object {
      "css": "# Header

- CSS

  \`\`\`css
  a {
    color: red;
  }
  \`\`\`
",
      "file": "/nest.md",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
    ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 15,
                  "line": 7,
                  "offset": 46,
                },
                "inputId": 0,
                "start": Object {
                  "column": 5,
                  "line": 7,
                  "offset": 36,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
  ",
            "before": "  ",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 3,
              "line": 8,
              "offset": 50,
            },
            "inputId": 0,
            "start": Object {
              "column": 3,
              "line": 6,
              "offset": 28,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "  \`\`\`
",
        "codeBefore": "# Header

- CSS

  \`\`\`css
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 6,
          "offset": 26,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests no-effect-ignore-comment.md ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "a {
  color: red;
}
",
      "file": "/no-effect-ignore-comment.md",
      "hasBOM": false,
    },
    Object {
      "css": "# Header

<!--postcss-ignore-->

- foo

\`\`\`css
a {
  color: red;
}
\`\`\`
",
      "file": "/no-effect-ignore-comment.md",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 9,
                  "offset": 63,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 9,
                  "offset": 53,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 10,
              "offset": 65,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 47,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "\`\`\`
",
        "codeBefore": "# Header

<!--postcss-ignore-->

- foo

\`\`\`css
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 47,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests test.md ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "a {
  color: red;
}
",
      "file": "/test.md",
      "hasBOM": false,
    },
    Object {
      "css": "a {
  color: red;
}
",
      "file": "/test.md",
      "hasBOM": false,
    },
    Object {
      "css": "a {
  color: red;
}
",
      "file": "/test.md",
      "hasBOM": false,
    },
    Object {
      "css": "# Header

\`\`\`css
a {
  color: red;
}
\`\`\`

\`\`\`scss
a {
  color: red;
}
// comment
.b {
  color: red;
}
\`\`\`

\`\`\`html
<style>
a {
  color: red;
}
</style>
\`\`\`

<style>
a {
  color: red;
}
</style>

\`\`\`
block
\`\`\`
",
      "file": "/test.md",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 5,
                  "offset": 33,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 5,
                  "offset": 23,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 35,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 17,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "# Header

\`\`\`css
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 17,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 11,
                },
                "input": Input {
                  "css": "a {
  color: red;
}
// comment
.b {
  color: red;
}
",
                  "file": "/test.md",
                  "hasBOM": false,
                },
                "start": Object {
                  "column": 3,
                  "line": 11,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 12,
            },
            "input": Input {
              "css": "a {
  color: red;
}
// comment
.b {
  color: red;
}
",
              "file": "/test.md",
              "hasBOM": false,
            },
            "start": Object {
              "column": 1,
              "line": 10,
            },
          },
          "type": "rule",
        },
        Object {
          "raws": Object {
            "before": "
",
            "inline": true,
            "left": " ",
            "right": "",
            "text": "comment",
          },
          "source": Object {
            "end": Object {
              "column": 10,
              "line": 13,
            },
            "input": Input {
              "css": "a {
  color: red;
}
// comment
.b {
  color: red;
}
",
              "file": "/test.md",
              "hasBOM": false,
            },
            "start": Object {
              "column": 1,
              "line": 13,
            },
          },
          "text": "comment",
          "type": "comment",
        },
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 15,
                },
                "input": Input {
                  "css": "a {
  color: red;
}
// comment
.b {
  color: red;
}
",
                  "file": "/test.md",
                  "hasBOM": false,
                },
                "start": Object {
                  "column": 3,
                  "line": 15,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "
",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".b",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 16,
            },
            "input": Input {
              "css": "a {
  color: red;
}
// comment
.b {
  color: red;
}
",
              "file": "/test.md",
              "hasBOM": false,
            },
            "start": Object {
              "column": 1,
              "line": 14,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "\`\`\`

\`\`\`scss
",
        "semicolon": false,
      },
      "source": Object {
        "inline": false,
        "input": Input {
          "css": "a {
  color: red;
}
// comment
.b {
  color: red;
}
",
          "file": "/test.md",
          "hasBOM": false,
        },
        "lang": "scss",
        "start": Object {
          "column": 1,
          "line": 10,
        },
        "syntax": Object {
          "parse": [Function],
          "stringify": [Function],
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 22,
                  "offset": 139,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 22,
                  "offset": 129,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 23,
              "offset": 141,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 21,
              "offset": 123,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "",
        "codeBefore": "\`\`\`

\`\`\`html
<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 21,
          "offset": 123,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 2,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 2,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 29,
                  "offset": 181,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 29,
                  "offset": 171,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 30,
              "offset": 183,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 28,
              "offset": 165,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "</style>

\`\`\`
block
\`\`\`
",
        "codeBefore": "</style>
\`\`\`

<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 28,
          "offset": 165,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;
